--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ img {
 }
 
 .page {
-    margin-top: 5rem;
+    /* border: solid 1px red; */
+    margin-bottom: 2rem;
 }
 
 .page-title {
@@ -137,6 +138,7 @@ img {
 #landing-page {
     width: 100%;
     height: auto;
+    margin-top: 7rem;
 
     justify-content: center;
     align-items: center;
@@ -336,7 +338,6 @@ img {
 /* Skills Page */
 #skills-page {
     width: 100%;
-    height: 25rem;
     display: flex;
     position: relative;
 }
@@ -358,6 +359,7 @@ img {
 
 #cards {
     margin-top: 1rem;
+    padding: 1rem;
     gap: 2rem 3rem;
 
     display: grid;
@@ -553,7 +555,7 @@ footer {
 
     width: 100%;
     padding: 1.2rem 0;
-    gap: 1rem;
+    gap: .5rem 0rem;
 
     display: flex;
     flex-direction: column;
@@ -563,7 +565,7 @@ footer {
 }
 
 #social-icons {
-    gap: 0 4rem;
+    gap: 0 2rem;
 
     display: flex;
 }
@@ -578,8 +580,8 @@ footer {
     border: none;
     border-radius: var(--brd-r);
 
-    width: 2.8rem;
-    height: 2.8rem;
+    width: 2.5rem;
+    height: 2.5rem;
     display: flex;
 }
 
